--- a/style.css
+++ b/style.css
@@ -1,7 +1,160 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
-  padding: 0px;
   margin: 0px;
+  padding: 0px;
   font-family: "Noto Sans", sans-serif;
+  color: #010400;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: bolder;
+  margin: 0px;
+  padding: 0px;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0px;
+  padding: 0px;
+}
+
+h4 {
+  font-size: 16px;
+  color: #7c7c7c;
+  font-weight: 700;
+  margin: 0px;
+  padding: 0px;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 500;
+  color: #7c7c7c;
+  margin: 0px;
+  padding: 0px;
+}
+
+label {
+  font-size: 14px;
+  font-weight: 500;
+  width: 100%;
+}
+
+a {
+  font-size: 14px;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+button {
+  background-color: #5936cd;
+  height: 56px;
+  width: 432px;
+  border-radius: 12px;
+  border-color: #5936cd;
+  border-width: 2px;
+  border-style: solid;
+  color: #f4f4f9;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+button.small {
+  background-color: #f4f4f9;
+  width: 90px;
+  height: 36px;
+  color: #010400;
+  font-size: 14px;
+  border-radius: 8px;
+}
+
+input {
+  background-color: #f4f4f9;
+  width: 100%;
+  height: 48px;
+  border-color: #06bee1;
+  border-radius: 8px;
+  border-style: solid;
+  border-width: 2px;
+  color: #010400;
+  font-size: 16px;
+  padding: 6px;
+  box-sizing: border-box;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.mt {
+  margin-top: 16px;
+}
+
+.mt.smaller {
+  margin-top: 6px;
+}
+
+.mt.small {
+  margin-top: 12px;
+}
+
+.mt.large {
+  margin-top: 24px;
+}
+
+.mt.larger {
+  margin-top: 32px;
+}
+
+.logo {
+  width: 88px;
+  height: auto;
+}
+
+.auth-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #5936cd;
+}
+
+.auth-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 480px;
+  height: auto;
+  min-height: 440px;
+  border-radius: 24px;
+  background-color: #f4f4f9;
+}
+
+.auth-content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 24px;
 }
