--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ label {
 }
 
 a {
+  color: #010400;
   font-size: 14px;
   font-weight: 700;
   text-decoration: underline;
@@ -67,6 +68,7 @@ button {
   color: #f4f4f9;
   font-weight: bold;
   font-size: 16px;
+  cursor: pointer;
 }
 
 button.small {
