feat: implement layout for table

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ button {
 }
 
 button.small {
-  background-color: #f4f4f9;
+  background-color: #ffffff;
   width: 90px;
   height: 36px;
   color: #010400;
