--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -4,7 +4,8 @@
   align-items: flex-start;
   justify-content: flex-start;
   width: 100vw;
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   background-color: #f4f4f9;
 }
 
@@ -13,7 +14,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
   height: 72px;
   background-color: #ffffff;
   padding: 24px 122px;
@@ -63,4 +64,66 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.table-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 0px 122px;
+  box-sizing: border-box;
+}
+
+.table-content-container {
+  width: 100%;
+  display: flex;
+  height: 592px;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  background-color: #ffffff;
+  border-radius: 24px;
+  padding: 24px;
+  box-sizing: border-box;
+}
+
+.table-content-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 24px;
+  box-sizing: border-box;
+}
+
+table {
+  width: 100%;
+}
+
+th {
+  text-align: left;
+  color: #7c7c7c;
+}
+
+th.right {
+  text-align: right;
+}
+
+th.center {
+  text-align: center;
+}
+
+td {
+  color: #7c7c7c;
+}
+
+td.right {
+  text-align: right;
+}
+
+td.center {
+  text-align: center;
 }
